http://www.rsnapshot.org/
------------------------------------------------------------------------------

VERSION 1.1.4 (??? ?? ??:?? 2004)
------------------------------------------------------------------------------
- Set LC_ALL variable to C in an attempt to fix rmtree() locale issue
- Added utils/make_cvs_snapshot.sh utility script
- Added utils/sign_packages.sh utility script
- Standardized comment headers in utils/ scripts

VERSION 1.1.3 (Apr 06 14:24 2004)
------------------------------------------------------------------------------
- Validating rsync_short_args, must be in format '-an', not '-a -n'
- Assembling @cmd_stack list one at a time, rather than using join()
- Added "don't panic" message in rotate_interval() at verbose >= 4
  when no filesystem actions get performed
- Fixed latent display bug in print_msg() (now that it's getting used)
- Fixed "cd //" display bug when running from root directory (removed extra /)

VERSION 1.1.2 (Mar 17 02:12 2004)
------------------------------------------------------------------------------
- Fixed slash formatting issue with non-ssh rsync protocol calls
- Fixed a slightly inconvenient permissions issue in rsnaptar
- Added support for arbitrary arguments to backup_script files

VERSION 1.1.1 (Feb 11 23:24 2004)
------------------------------------------------------------------------------
- Changed some fatal errors to warnings in some recursive subroutines
- Added optional GPG support to the rsnaptar utility shell script

VERSION 1.1.0 (Jan 24 16:41 2004)
------------------------------------------------------------------------------
- The first interval must now have a value of at least 2 if more than one
  interval is being used
- Now allows "/" as a backup point on the local drive
- Cleaned up command formatting to consolidate slashes
- Added subroutines for centralized print/logging
- Added logfile and loglevel parameters to the config file
- Added logging feature