@@ -8,6 +8,7 @@ VERSION 1.1.4 (??? ?? ??:?? 2004)
 - Set LC_ALL variable to C in an attempt to fix rmtree() locale issue
 - Added utils/make_cvs_snapshot.sh utility script
 - Added utils/sign_packages.sh utility script
+- Added utils/rsnapshot_if_mounted.sh utility script
 - Standardized comment headers in utils/ scripts
 
 VERSION 1.1.3 (Apr 06 14:24 2004)
